[package]
authors = ["theduke <chris@theduke.at>"]
name = "crates_io_api"
description = "API client for crates.io"
license = "MIT/Apache-2.0"
repository = "https://github.com/theduke/crates_io_api"
documentation = "https://docs.rs/crates_io_api"
readme = "README.md"
keywords = [ "crates", "api" ]
categories = [ "web-programming", "web-programming::http-client" ]
edition = "2018"

version = "0.6.1"

[dependencies]
url = "2.1.0"
log = "0.4.5"
nanoserde = "0.1.19"
ureq = {version="1.4.0", default-features=false, features= ["tls"]}

